fix test, but not all